programacion/ProjectoFinal-ITV/src/main/kotlin/com/example/projectofinalitv/error/TrabajadorError.kt
package com.example.projectofinalitv.error

sealed class TrabajadorError(val message: String){
    class ExportingError(message: String): TrabajadorError(message)
}